# rs-vk-tracer

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
demo/: Cargo.toml
demo/shaders/: checker.comp  simple.comp
demo/src/: main.rs
examples/: sample.rs
rs-vk-tracer/: Cargo.toml
rs-vk-tracer-renderer/: Cargo.toml
rs-vk-tracer-renderer/src/: debug_utils.rs  errors.rs  extensions.rs  lib.rs  physical_device_selection.rs  surface.rs  validation_layers.rs  vulkan_app.rs
rs-vk-tracer/src/: main.rs
tools/: merge_render_graph_diagrams.sh
vk_tracer/: Cargo.toml
vk_tracer/examples/: api_mockup.rs  camera.rs  model.rs  sample.rs  test_sandbox.rs  triangle.rs
vk_tracer/examples/shaders/: camera.frag.glsl  camera.vert.glsl  model.frag.glsl  model.vert.glsl  simple.frag  simple.vert  triangle.vert.glsl
vk_tracer/src/: adapter.rs  allocation.rs  allocator.rs  buffers.rs  command_recorder.rs  debug_utils.rs  descriptor_sets.rs  device.rs  errors.rs  extensions.rs  images.rs  instance.rs  lib.rs  mem.rs  mesh.rs  mesh_storage.rs  physical_device_selection.rs  present.rs  queue_indices.rs  render.rs  render_creator.rs  render_graph.rs  render_graph2.rs  renderer_creator.rs  renderer_creator_builder.rs  setup.rs  surface.rs  swapchain.rs  utils.rs
vk_tracer/src/mem/: allocator.rs  buffer.rs  buffers.rs  descriptor_set.rs  image.rs  ubo.rs
vk_tracer/src/new/: adapter.rs  app_builder.rs  extensions.rs  mem.rs  mesh.rs  mod.rs  physical_device_selection.rs  pipeline.rs  queue_indices.rs  render.rs  render_plan.rs  render_target.rs  surface.rs  swapchain.rs
vk_tracer/src/new/mem/: allocator.rs  buffers.rs  image.rs
vk_tracer/src/new/pipeline/: forward.rs  renderer.rs
vk_tracer/src/new/render/: forward.rs  renderer.rs
vk_tracer/src/present/: mod.rs  render_pass.rs  surface.rs  swapchain.rs
vk_tracer/src/raytracing/: mod.rs
vk_tracer/src/render/: forward.rs  render_plan.rs  render_target.rs  renderer.rs
vk_tracer/src/render_graph/: allocation.rs  attachments.rs  baking.rs  graph.rs
vk_tracer/src/render_graph2/: allocation.rs  backing.rs  baking.rs  builder.rs
vk_tracer/src/renderers/: forward_renderer.rs  main_renderer.rs  mod.rs
vk_tracer/src/setup/: adapter.rs  app_builder.rs  debug_utils.rs  extensions.rs  mod.rs  physical_device_selection.rs  queue_indices.rs  renderer_creator_builder.rs
vk_tracer/src/utils/: camera.rs  fps_limiter.rs  model_loader.rs  shader_compiler.rs
