[workspace]
members = [
    "vk_tracer",
]

[patch.crates-io]
ash = { git = "https://github.com/MaikKlein/ash.git", branch = "master", version = "=0.32.0" }
ash-window = { git = "https://github.com/MaikKlein/ash.git", branch = "master", version = "=0.6.0" }
indexmap = { git = "https://github.com/icanwalkonwater/indexmap.git", branch = "master" }
