[workspace]
members = [
    "vk_tracer",
]

[patch.crates-io]
ash = { git = "https://github.com/MaikKlein/ash.git", branch = "master", version = "=0.32.0" }
ash-window = { git = "https://github.com/MaikKlein/ash.git", branch = "master", version = "=0.6.0" }
vk-mem = { git = "https://github.com/icanwalkonwater/vk-mem-rs.git", branch = "master" }
indexmap = { git = "https://github.com/icanwalkonwater/indexmap.git", branch = "master" }
