[package]
name = "rs-vk-tracer"
version = "0.1.0"
authors = ["Lucas Malandrino <lucas.malandrino@gmail.com>"]
edition = "2018"

[features]
default = ["raytracing"]
raytracing = ["rs-vk-tracer-renderer/raytracing-nv"]

[dependencies]
anyhow = "~1.0.32"
simplelog = "~0.8.0"

[dependencies.rs-vk-tracer-renderer]
path = "../rs-vk-tracer-renderer"
version = "*"
default-features = false
features = [
    "validation-layers"
]
