[package]
name = "vk_tracer"
version = "0.1.0"
authors = ["Lucas Malandrino <lucas.malandrino@gmail.com>"]
edition = "2018"

[features]
default = ["shaderc"]
nalgebra = ["glsl-layout/nalgebra"]
fps_limiter = []
no_storage_checks = []

[dependencies]
# Conveniences
thiserror = "^1.0"
log = "^0.4"
lazy_static = "^1.4"
field-offset = "^0.3"
slotmap = "^1.0"
parking_lot = "^0.11"

# 3D stuff
ash = "^0.32"
ash-window = "^0.6"
raw-window-handle = "^0.3"
shaderc = { version = "^0.7", optional = true }
vk-mem = "^0.2"
glsl-layout = { path = "\\\\wsl$\\Ubuntu\\tmp\\glsl-layout", version = "^0.4" }

[dev-dependencies]
winit = "^0.25"
anyhow = "^1.0"
env_logger = "^0.8"
nalgebra-glm = "^0.13"
