[package]
name = "vk_tracer"
version = "0.1.0"
authors = ["Lucas Malandrino <lucas.malandrino@gmail.com>"]
edition = "2018"

[features]
default = ["shaderc", "math", "camera", "model_loader", "render_graph"]
math = ["nalgebra-glm", "glsl-layout/nalgebra"]
camera = ["math"]
model_loader = ["gltf", "math"]
render_graph = ["indexmap", "multimap"]
fps_limiter = []
no_storage_checks = []

visualizer_render_graph = ["render_graph"]

[dependencies]
# Conveniences
thiserror = "^1.0"
log = "^0.4"
lazy_static = "^1.4"
field-offset = "^0.3"
slotmap = "^1.0"
parking_lot = "^0.11"
indexmap = { version = "^1.6", optional = true }
multimap = { version = "^0.8", optional = true }
itertools = "^0.10"

# 3D stuff
ash = "=0.32.0"
ash-window = "^0.6"
raw-window-handle = "^0.3"
shaderc = { version = "^0.7", optional = true }
vk-mem = "^0.2"
glsl-layout = { git = "https://github.com/icanwalkonwater/glsl-layout.git", branch = "update_nalgebra", version = "^0.4" }
nalgebra-glm = { version = "^0.13", optional = true }
gltf = { version = "^0.16", optional = true }

[dev-dependencies]
winit = "^0.25"
anyhow = "^1.0"
env_logger = "^0.8"
